--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,603 @@
-.App {
-  text-align: center;
+a, i {
+  border: none;
+}
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
+  background: transparent;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
+  outline: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* ---   TOPBAR   --- */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.topbar{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: 10;
+  padding: 20px 0px;
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease;
+}
+.topbar.active{
+  background-color: #e65f7878;
+}
+.container{
+  max-width: 1170px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
+  /*padding: 0px 40px;*/
+  position: relative;
+  clear: both;
+}
+@media screen and (max-width: 1300px) {
+  .container {
+    max-width: 740px;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@media screen and (max-width: 800px) {
+  .container {
+    max-width: 550px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .container {
+    max-width: 370px;
+  }
+  .portfolio .portfolio_list ul li .inner{
+    width: 80%;
+  }
+}
+.bio-container{
+  margin: 0 15px;
+}
+.topbar .topbar_inner{
+  width: 100%;
+  height: auto;
+  clear: both;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.topbar .menu ul {
+  margin: 0px;
+  list-style-type: none;
+}
+.topbar .menu ul li {
+  margin: 0px 20px 0px 0px;
+  display: inline-block;
+}
+.topbar .menu ul li:last-child {
+   margin: 0;
+   display: inline-block;
+ }
+.topbar .menu ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 500;
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease;
 }
 
-.App-link {
-  color: #61dafb;
+/* ---   ME   --- */
+
+.me {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  float: left;
+  clear: both;
+  overflow: hidden;
+}
+.me .background {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+}
+.me .background .image {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  background-image: url(https://ehyt.fi/wp-content/uploads/2020/10/pexels-max-andrey-1254736.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.me .background .overlay {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  background-color: rgb(113 110 110 / 25%);
+  z-index: 1;
+}
+.me .content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+  z-index: 2;
+}
+.me .image_wrap {
+  width: 190px;
+  height: 190px;
+  display: inline-block;
+  margin-bottom: 33px;
+  position: relative;
+}
+.me .image_wrap .main {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  background-image: url(/src/avatar-rounded.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 100%;
+}
+.me .image_wrap .main:before {
+  position: absolute;
+  content: "";
+  top: -8px;
+  bottom: -8px;
+  left: -8px;
+  right: -8px;
+  border-radius: 100%;
+  background-color: rgba(255,255,255,.08);
+  z-index: -1;
+}
+.me .name_holder {
+  margin-bottom: 9px;
+}
+.me .name_holder h3 {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 45px;
+  font-weight: 800;
+  font-family: "Montserrat";
+}
+.name_holder h3 span {
+  color: #e65f78;
+  text-shadow: -2px 2px 1px #fff;
+}
+.arrow_wrap.bounce {
+  animation-name: bounce;
+  animation-timing-function: ease;
+}
+.arrow_wrap {
+  position: absolute;
+  left: 50%;
+  bottom: 30px;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  transform-origin: bottom;
+  z-index: 6;
+  margin-left: -21px;
+}
+.arrow_wrap a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 30px;
+}
+.double-down::before {
+  content: '⠀⠀';
+  display: inline-block;
+  background: url(/src/double-arrow.svg) no-repeat center center;
+  background-size: contain;
+}
+@keyframes bounce {
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-15px); }
+  100% { transform: translateY(0); }
 }
 
-@keyframes App-logo-spin {
+/* ---   ABOUT   --- */
+
+.about {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+  margin-bottom: 150px;
+  padding-top: 140px;
+}
+.about .about_inner {
+  width: 100%;
+  height: auto;
+  clear: both;
+  display: flex;
+  padding-top: 100px;
+}
+.about .left {
+  width: 35%;
+  float: left;
+  height: auto;
+}
+.about .left .about_image_wrap {
+  position: relative;
+}
+.about .left .about_image_wrap .image-layer .inner {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  background-image: url(/src/about-photo.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 451px;
+  min-width: 150px;
+}
+.about .left .about_image_wrap img {
+  opacity: 0;
+  min-width: 100%;
+}
+.about .left .about_image_wrap .border-layer .inner {
+  position: absolute;
+  top: 25px!important;
+  bottom: -25px!important;
+  left: 25px!important;
+  right: -25px!important;
+  border: 10px
+  solid #000;
+  height: 431px;
+  z-index: -1;
+  min-width: 125px;
+}
+.about .right {
+  width: 60%;
+  height: auto;
+  padding-left: 75px;
+}
+.about .right .about_title {
+  margin-bottom: 30px;
+}
+.bio_title span {
+  color: #e65f78;
+}
+.bio_title h3 {
+  font-size: 30px;
+  font-weight: 800;
+}
+.about_title h3 span{
+  color: #e65f78;
+}
+.about .right .text {
+  margin-bottom: 23px;
+  float: left;
+}
+.about .about_short_contact_wrap {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+  margin-bottom: 24px;
+  margin-left: 15px;
+}
+.about .about_short_contact_wrap ul {
+  margin: 0px;
+  list-style-type: space-counter;
+}
+.about .about_short_contact_wrap ul li {
+  margin: 0px 0px 10px 0px;
+  width: 95%;
+  float: left;
+  position: relative;
+  padding-left: 5px;
+}
+@counter-style space-counter {
+  system: fixed;
+  symbols: "\1F973" "\1F680" "\1F3E0" "\1F585" "\1F4F2";
+  suffix: "";
+}
+.button {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+}
+.button a {
+  background-color: #e65f78;
+  text-decoration: none;
+  color: #fff;
+  background-color: #e65f78;
+  display: inline-block;
+  padding: 12px 45px;
+  font-weight: 700;
+  position: relative;
+  overflow: hidden;
+}
+div.btn {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+}
+button.send {
+  background-color: #e65f78;
+  text-decoration: none;
+  color: #fff;
+  background-color: #e65f78;
+  display: inline-block;
+  padding: 12px 45px;
+  font-weight: 700;
+  position: relative;
+  overflow: hidden;
+}
+
+/* ---   SKILLS   --- */
+
+.section {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+}
+.skills {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+  background-color: #f9f9f9;
+  padding: 140px 0px;
+}
+.main_title {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+}
+.main_title span {
+  color: #e65f78;
+}
+.main_title h3 {
+  font-size: 30px;
+  font-weight: 800;
+}
+.skills .skills_inner {
+  width: 85%;
+  height: auto;
+  clear: both;
+  float: left;
+  padding-top: 90px;
+}
+.skills .skills_inner ul {
+  margin: 0px 0px 0px -50px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 38px;
+}
+.skills .skills_inner ul li {
+  margin: 0px 0px 50px 0px;
+  float: left;
+  width: 33.3333%;
+  padding-left: 50px;
+  opacity: 0;
+}
+.skills .skills_inner ul li:last-child{
+  margin: 0px 0px 50px 17.8%;
+}
+.skills .skills_inner ul li .inner {
+  width: 95%;
+  height: 100%;
+  clear: both;
+  float: left;
+  position: relative;
+  box-shadow: 0px 0px 20px rgb(0 0 0 / 9%);
+  /*padding: 60px 20px 53px 20px;*/
+  padding: 35px;
+  background-color: #fff;
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease;
+}
+.skills .skills_inner ul li .inner h3 {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.section{
+  background-color: #f9f9f9;
+}
+.container .lets_work {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+  padding-bottom: 140px;
+  opacity: 0;
+}
+.container .lets_work p {
+   font-size: 18px;
+ }
+.container .lets_work a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 600;
+  display: inline-block;
+  position: relative;
+}
+.container .lets_work a:before {
+  content: '';
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  left: auto;
+  right: 0;
+  bottom: 3px;
+  background: rgba(0,0,0,.2);
+}
+.container .lets_work a:after {
+  content: '';
+  width: 0;
+  height: 1px;
+  position: absolute;
+  left: auto;
+  right: 0;
+  bottom: 3px;
+  transition: width .6s cubic-bezier(.25,.8,.25,1) 0s;
+  background: currentColor;
+}
+.fadeInLeft {
+  animation-name: fadeInLeft;
+  animation-duration: 1.5s;
+  opacity: 1!important;
+}
+@keyframes fadeInLeft {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
   }
+
   to {
-    transform: rotate(360deg);
+    opacity: 1;
+    transform: none;
   }
+}
+
+/* ---   PORTFOLIO   --- */
+
+.portfolio {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+  margin-bottom: 140px;
+  padding-top: 140px;
+}
+.portfolio .portfolio_inner {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+  padding-top: 73px;
+}
+.portfolio_list {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+}
+.portfolio .portfolio_list ul {
+  list-style-type: none;
+}
+.portfolio .portfolio_list ul li {
+  float: left;
+}
+.portfolio .portfolio_list ul li .inner {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+  overflow: hidden;
+  position: relative;
+}
+a.zoom img {
+  width: 100%;
+}
+.entry {
+  position: relative;
+  height: 250px;
+  width: 350px;
+  margin: 10px;
+}
+#portfolio{
+  background: white;
+}
+
+/* ---   CONTACT   --- */
+
+.contact {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+  padding: 140px 0px 140px 0px;
+}
+.contact .desc {
+  max-width: 100%;
+  float: left;
+  padding-top: 73px;
+}
+.contact .contact_inner .wrapper {
+  width: 100%;
+  height: auto;
+  clear: both;
+  display: flex;
+  padding-top: 43px;
+}
+.contact .contact_inner .left {
+  width: 50%;
+  padding-right: 25px;
+}
+.contact .fields {
+  width: 100%;
+  height: auto;
+  clear: both;
+  float: left;
+}
+.contact .returnmessage {
+  color: #3A00FF;
+  margin-bottom: 7px;
+  text-align: left;
+  font-weight: 500;
+}
+.contact .empty_notice {
+  color: #F52225;
+  margin-bottom: 7px;
+  display: none;
+  text-align: left;
+  font-weight: 500;
+}
+.contact .fields .first {
+  width: 100%;
+  float: left;
+}
+.contact .fields ul {
+  margin: 0px;
+  list-style-type: none;
+}
+.contact .fields ul li {
+  width: 100%;
+  margin: 0px 0px 30px 0px;
+  float: left;
+}
+.contact .fields ul li input {
+  width: 100%;
+  border: 1px solid rgba(0,0,0,.2);
+  background-color: #fff;
+  padding: 10px;
+}
+.contact .fields .last textarea {
+  width: 100%;
+  border: 1px solid rgba(0,0,0,.2);
+  height: 120px;
+  resize: none;
+  margin-bottom: 20px;
+  background-color: #fff;
+  padding: 10px;
 }
